contract: types() answers in registration order again
`ValueCatalog` held its registrations in a `Map.copyOf`, whose iteration
order is unspecified *and randomised per JVM run*. So `types()` — whose
own javadoc says "in registration order", and which backs every "what
type is this variable" dropdown — answered a different order every time
Studio started.

Nobody would file that as a bug; they would file it as the application
feeling unreliable. And no single run of anything could have shown it:
it was found by diffing a generated `Parameters` file across two builds
of the same source and getting two different files. It had been true
since the vocabulary opened.

An unmodifiable `LinkedHashMap` instead, with the reason on the field so
the next reader does not "simplify" it back. `typesComeBackInRegistration
Order` pins it on one catalog, on two identically built catalogs, and
across a merge — a second plugin's types append rather than reordering
the first's.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01JAH57UVvhGRaUZSCyxSGey